--- a/style.css
+++ b/style.css
@@ -1,6 +1,45 @@
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0;
 }
 .name-highlight{
     color: blueviolet;
+}
+h1{
+    font-size: 2em;
+}
+
+.half-width{
+    width: 40%;
+    float: left;
+    margin-left: 5%;
+    padding-left: 2%;
+}
+.half-width img{
+    width: 100%;
+    position: relative;
+   
+}
+.purple{
+    color: white;
+    background-color: blueviolet;
+    background-image: linear-gradient(45deg, rgb(152, 61, 236), rgb(68, 8, 124));
+}
+.button{
+    padding: 8px 30px;
+    text-decoration: none;
+    border-radius: 5%;
+    border-color: blueviolet;
+    font-family: 'Poppins', sans-serif;
+}
+.button:hover{
+    background-image: linear-gradient(90deg, rgb(152, 61, 236), rgb(68, 8, 124));
+    font-size: 1.1em;
+}
+.top-banner{
+    background-repeat: no-repeat;
+    background-image: url(images/top-banner.png);
+}
+section{
+    height: 600px;
 }
