--- a/style.css
+++ b/style.css
@@ -2,6 +2,18 @@ body{
     font-family: 'Poppins', sans-serif;
     margin: 0;
 }
+body::-webkit-scrollbar {
+    width: 6px;
+  }
+   
+  body::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(204, 204, 204, 0.3);
+  }
+   
+  body::-webkit-scrollbar-thumb {
+    background-color: blueviolet;
+    outline: 1px solid rgb(73, 36, 207);
+  }
 .name-highlight{
     color: blueviolet;
 }
