--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
-    font-family: 'Poppins', sans-serif;
-    margin: 0;
+  user-select: none;
+  font-family: 'Poppins', sans-serif;
+  margin: 0;
 }
 body::-webkit-scrollbar {
     width: 6px;
@@ -21,10 +22,19 @@ h1{
     font-size: 2em;
 }
 h2{
+    color: #602dee;
     font-size: 1.7em;   
 }
+.buttons{
+  display: flex;
+}
 .header-tag{
-  margin: 7%;
+  font-size: 30px;
+  position: relative;
+  top: 20px;
+  clear: both;
+  margin-left: 6%;
+  margin-bottom: 4%;
 }
 p{
     color: dimgrey;
@@ -37,9 +47,14 @@ p{
     position: inherit;
 }
 .half-width img{
-    width: 100%;
+    width: 80%;
     position: relative;
    
+}
+.right-half{
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
 .green{
     color: rgb(15, 15, 15);
@@ -53,6 +68,7 @@ p{
     background-image: linear-gradient(45deg, rgb(255, 142, 98), tomato);
 }
 .purple{
+    margin-right: 10px;
     color: white;
     background-color: blueviolet;
     background-image: linear-gradient(45deg, rgb(152, 61, 236), rgb(68, 8, 124));
@@ -167,7 +183,9 @@ section{
     border-image: linear-gradient(90deg , blue, cyan);
     border-image-slice: 1;
   }
-
+  .projects{
+    height:auto
+  }
   .project1{
     border-image: linear-gradient(90deg , blue, cyan);
     border-image-slice: 1;
@@ -261,23 +279,31 @@ section{
       width: 50%;
     }
     section{
-      
       height: auto;
       padding-bottom: 0;
-  }
-  .single-experience{
+   }
+    .single-experience{
     border-radius: 5px;
     height: auto;
     width: fit-content;
     margin: 20px;
-}
-  }
+   }
+   .half-width{
+    clear: both;
+   }
+   .half-width img{
+    display: none;
+   }
   
 
   @media screen and (max-width: 800px) {
     .half-width, .button, .single-experience {
       height: auto;
       width: 80%; /* The width is 100%, when the viewport is 800px or smaller */
+    }
+    .buttons{
+      flex-direction: column;
+      width: 100px;
     }
   }
   /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
@@ -309,4 +335,5 @@ section{
         word-wrap: break-word;
       }
       
+  }
   }
