--- a/style.css
+++ b/style.css
@@ -337,3 +337,11 @@ section{
       
   }
   }
+
+  #preloader{
+    background: #1b1941 url(images/preloader.gif) no-repeat center center;
+    height: 100vh;
+    width: 100%;
+    position: fixed;
+    z-index: 100;
+  }
